# rustls-webpki-repro

./: Cargo.toml  README.md  ca-config.json  flake.nix  gen-certs.sh  main.go
src/: main.rs
testdata/: ca1-key.pem  ca1.pem
testdata/cn-test-ca1/: crt.der  csr.pem  key.p8
testdata/foo-test-ca1/: crt.der  csr.pem  key.p8
testdata/no-cn-test-ca1/: crt.der  csr.pem  key.p8
