[package]
name = "rustls-webpki-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls-webpki-101 = { package = "rustls-webpki", version = "0.101.4" }
rustls-webpki-102 = { package = "rustls-webpki", version = "0.102.0-alpha.1" }
